# audio-preprocess

./: .gitignore  .pre-commit-config.yaml  README.md  README.zh.md  fap-complete.zsh  pyproject.toml
.github/workflows/: ci.yml
fish_audio_preprocess/cli/: __main__.py  convert_to_wav.py  enhance.py  frequency.py  length.py  loudness_norm.py  merge_lab.py  merge_short.py  resample.py  separate_audio.py  slice_audio.py  to_ipa.py  transcribe.py  video_to_audio.py
fish_audio_preprocess/cli/so_vits_svc/: __init__.py  preprocess.py
fish_audio_preprocess/utils/: file.py  loudness_norm.py  polyphonic.yaml  separate_audio.py  slice_audio.py  slice_audio_v2.py  to_ipa.py  transcribe.py
tools/: lint.py
