[project]
authors = [
  {name = "Lengyue", email = "lengyue@lengyue.me"},
]
dependencies = [
  "tqdm>=4.64.1",
  "demucs>=4.0.0",
  "loguru>=0.6.0",
  "pyloudnorm>=0.1.1",
  "matplotlib>=3.6.2",
  "librosa>=0.9.0",
  "richuru>=0.1.1",
  "praat-parselmouth>=0.4.3",
]
description = "Preprocess audio data"
license = {text = "Apache"}
name = "fish-audio-preprocess"
readme = "README.md"
requires-python = ">=3.9,<4.0"
version = "0.2.4"

[tool.pdm]
[tool.pdm.build]
includes = ["fish_audio_preprocess"]

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[tool.isort]
profile = "black"
